--- a/src/frontend/css/style.css
+++ b/src/frontend/css/style.css
@@ -7,11 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-100: oklch(93.6% 0.032 17.717);
-    --color-red-400: oklch(70.4% 0.191 22.216);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
-    --color-red-900: oklch(39.6% 0.141 25.723);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-green-700: oklch(52.7% 0.154 150.069);
     --color-gray-300: oklch(87.2% 0.01 258.338);
@@ -280,9 +277,6 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
-  .mt-auto {
-    margin-top: auto;
-  }
   .mr-1 {
     margin-right: calc(var(--spacing) * 1);
   }
@@ -388,6 +382,9 @@
   }
   .h-screen {
     height: 100vh;
+  }
+  .min-h-0 {
+    min-height: calc(var(--spacing) * 0);
   }
   .min-h-\[calc\(100vh-120px\)\] {
     min-height: calc(100vh - 120px);
@@ -605,12 +602,6 @@
   .bg-red-700 {
     background-color: var(--color-red-700);
   }
-  .bg-red-900\/30 {
-    background-color: color-mix(in srgb, oklch(39.6% 0.141 25.723) 30%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-red-900) 30%, transparent);
-    }
-  }
   .bg-secondary {
     background-color: var(--color-secondary);
   }
@@ -673,9 +664,6 @@
   }
   .text-end {
     text-align: end;
-  }
-  .text-left {
-    text-align: left;
   }
   .text-start {
     text-align: start;
@@ -741,9 +729,6 @@
   }
   .text-background-light {
     color: var(--color-background-light);
-  }
-  .text-red-400 {
-    color: var(--color-red-400);
   }
   .text-text {
     color: var(--color-text);
@@ -1267,19 +1252,6 @@
       line-height: var(--tw-leading, var(--text-8xl--line-height));
     }
   }
-  .dark\:bg-red-700\/50 {
-    @media (prefers-color-scheme: dark) {
-      background-color: color-mix(in srgb, oklch(50.5% 0.213 27.518) 50%, transparent);
-      @supports (color: color-mix(in lab, red, red)) {
-        background-color: color-mix(in oklab, var(--color-red-700) 50%, transparent);
-      }
-    }
-  }
-  .dark\:text-red-100 {
-    @media (prefers-color-scheme: dark) {
-      color: var(--color-red-100);
-    }
-  }
   .dark\:text-text {
     @media (prefers-color-scheme: dark) {
       color: var(--color-text);
@@ -1420,6 +1392,13 @@ button {
 }
 .dark .bg-secondary {
   border: 1px solid var(--color-border-light);
+}
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--color-border-light);
+  border-radius: 10px;
 }
 @property --tw-rotate-x {
   syntax: "*";
